# fluff-rs

./: Cargo.toml
examples/: cli_game.rs
src/: bet.rs  game.rs  lib.rs  player.rs
src/game/: round.rs  state.rs
